GNOME Bugzilla – Bug 777521
Fix a couple memory leaks
Last modified: 2017-01-20 20:28:02 UTC
These seem pretty straightforward but might still be good for you to review them.
Created attachment 343861 [details] [review] Fix a couple memory leaks
Review of attachment 343861 [details] [review]: lgtm, thanks!
Pushed as commit c4270d31b206b5a8b205278e4e1856a283954867