Fix a couple memory leaks

https://bugzilla.gnome.org/show_bug.cgi?id=777521